[package]
name = "champion_diversity_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] } 
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
csv = "1.2.1"
serde_json = "1.0"
scraper = "0.15.0"
